--- a/web/themes/custom/tedx_pipitea_theme/assets/scss/pages/_about.scss
+++ b/web/themes/custom/tedx_pipitea_theme/assets/scss/pages/_about.scss
@@ -121,6 +121,9 @@
 }
 
 #block-views-block-team-member-view-block-1 {
+	h2 {
+		padding-bottom: 0;
+	}
 	.field--name-field-role {
 		display: none;
 	}
@@ -128,6 +131,14 @@
 		display: none;
 	}
 	margin-bottom: 60px;
+	a {
+		@include media-breakpoint-down(lg) {
+			padding-left: 20px;
+		}
+		@include media-breakpoint-down(md) {
+			padding-left: 0;
+		}
+	}
 }
 
 //team member
@@ -143,9 +154,7 @@
 		img {
 			width: 100%;
 		}
-		@include media-breakpoint-up(lg) {
-			//flex-basis: 50%;
-		}
+
 	}
 	.field--name-body {
 		margin: 30px 0;
